--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -1,6 +1,6 @@
 <% layout("layouts/boilerplate") %>
 
-<div id="map" style="width: 100%; height: 400px;"></div>
+<div id="map" class="rounded shadow mb-5" style="width: 100%; height: 400px;"></div>
 
 <div class="d-flex justify-content-between align-items-center">
     <h1 class="fw-semibold fs-2"><i class="fa-solid fa-list"></i> All Campgrounds</h1>
@@ -36,7 +36,10 @@
 
 
 <script>
-    const mapToken = '<%= process.env.MAPBOX_TOKEN %>';
+    const mapToken = '<%- process.env.MAPBOX_TOKEN %>';
+    const campgrounds = {
+        features: <%- JSON.stringify(campgrounds) %>
+    }
 </script>
 
 <script src="/js/clusterMap.js"></script>
